<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout9"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroung_for_many_error_grammar"
    tools:context=".view.main.grammar.manyerror.ManyErrorGrammarTrainingFragment">

    <ImageView
        android:id="@+id/closeManyError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/ic_close_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/manyErrorTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/proxima_soft_bold"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/manyerror"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/proxima_soft_medium"
        android:gravity="center"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:text="@string/returnrules"
        android:textColor="#7CFFFFFF"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manyErrorTV" />

    <com.example.englishapp.view.customview.WhitePushButtonView
        android:id="@+id/readRulls"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginBottom="99dp"
        android:text="@string/readrules"
        android:textAllCaps="false"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/trainingAgain"
        app:layout_constraintStart_toStartOf="@+id/trainingAgain" />

    <com.example.englishapp.view.customview.SimplePushButtonView
        android:id="@+id/trainingAgain"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        android:text="@string/trainagain1"
        android:textAllCaps="false"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>