<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.welcomefragment1.login.AuthLoginFragment">


    <ImageView
        android:id="@+id/back_from_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/ic_back_from_auth"
        android:layout_marginStart="17dp"
        android:layout_marginTop="25dp"
        />
    <TextView
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/proxima_soft_bold"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/AccountNotFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="73dp"
        android:fontFamily="@font/proxima_soft_medium"
        android:text="@string/account_not_found"
        android:textColor="#F44336"
        android:textSize="17sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn"
        app:lineHeight="20sp"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintRegistration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="117dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background_rounded_stroke_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn">

        <View
            android:id="@+id/dividerLoginAndPassword"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#E6E6E6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LoginEditText" />


        <EditText
            android:id="@+id/LoginEditText"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@drawable/edit_text_top_selector"
            android:drawableStart="@drawable/ic_pocta"
            android:drawablePadding="16dp"
            android:focusable="true"
            android:fontFamily="@font/proxima_soft_bold"
            android:hint="@string/login"
            android:paddingStart="20dp"
            android:textSize="21sp"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@drawable/edit_text_bottom_selector"
            android:drawableStart="@drawable/ic_lock_auth"
            android:drawablePadding="16dp"
            android:fontFamily="@font/proxima_soft_bold"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textSize="21sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LoginEditText" />

        <ImageView
            android:id="@+id/eyesForShowPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_eyes_for_password"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/password"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintTop_toTopOf="@+id/password" />

        <ImageView
            android:id="@+id/hideEyesForShowPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_hided_password"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/password"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintTop_toTopOf="@+id/password" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.example.englishapp.view.customview.SimplePushButtonView
        android:id="@+id/button_registration"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/proxima_soft_bold"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="19sp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConstraintRegistration" />


    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="Я забыл пароль"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_registration" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clGreyLoading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#7E757575"
        android:elevation="3dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/progressBar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:elevation="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/button_registration"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConstraintRegistration"
        app:lottie_rawRes="@raw/flag"
        app:lottie_repeatCount="5"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>
